<resources>
    <string name="app_name">My Fitness</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your fitness</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="error_login">one or more of the data is incorrect.\ntry again </string>
    <string name="userProfileFragment_title_profile">Personal Details</string>
    <string name="userProfileFragment_edit_profile">Edit Profile</string>
    <string name="userProfileFragment_user_name">User Name</string>
    <string name="userProfileFragment_email_address">Email address</string>
    <string name="userProfileFragment_birthday">Birthday</string>
    <string name="userProfileFragment_age">Age</string>
    <string name="userProfileFragment_weight">Weight</string>
    <string name="userProfileFragment_height">Height</string>
    <string name="userProfileFragment_bmi">BMI</string>
    <string name="userProfileFragment_target_weight">Target weight</string>
    <string name="userProfileFragment_activity_level">Activity Level</string>
    <string name="userProfileFragment_add">Add</string>
    <string name="userProfileFragment_change_password">Change Password</string>
    <string name="userProfileFragment_log_out">Log out</string>
    <string name="userProfileFragment_password">Select your password</string>
    <string name="userProfileFragment_edit_weight">Select your weight</string>
    <string name="userProfileFragment_edit_height">Select your height</string>
    <string name="userProfileFragment_edit_birthday">Select your birthday</string>
    <string name="userProfileFragment_edit_activity_level">Select your activity level</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="firFragment_start">START</string>
    <string name="serHomeFragment_start_building__workout">Building a new workout</string>
    <string name="userHomeFragment_alert_time">Select time to the next workout</string>
    <string name="hello">Hello</string>
    <string name="userHomeFragment_your_workout">Your workout</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select time</string>
    <string name="userHomeFragment_your_alert">Next workout at </string>
    <string name="on">on</string>
    <string name="userHomeFragment_notification">Your next workout is now!!</string>
    <string name="type">Type:</string>
    <string name="listView_workout_reps_each_set">reps each set</string>
    <string name="listView_workout_time_each_set">second each set</string>
    <string name="select_exercise">Select exercise</string>
    <string name="top_line">:\t</string>
    <string name="userHomeFragment_notification_title">Your Next workout</string>
    <string name="userHomePage_error_message_alert">Sorry!\nYou can not choose time before now.</string>
    <string name="fitShowFragment_next">NEXT</string>
    <string name="fitShowFragment_stop">STOP</string>
    <string name="fitShowFragment_training_plan_done">\n\n\nTraining plan\ndone!</string>
    <string name="errorMessageDialog_error_message">Something wrong happened!!</string>
    <string name="oops">oops!</string>
    <string name="errorMessageDialog_go_back">Go back later.</string>
    <string name="errorMessageDialog_no_training_plan1">You do not have a training plan yet!!</string>
    <string name="errorMessageDialog_no_training_plan2">Go back after you build your workout.</string>
    <string name="reps">reps</string>
    <string name="second">second</string>
    <string name="finish">FINISH</string>
    <string name="fitShowFragment_start">START</string>
    <string name="userHomeFragment_no_trainingPlan">Your workout is empty!\nFor build click on Build a new workout.</string>
    <string name="buildWorkoutFragment_title">Building workout</string>
    <string name="buildWorkoutFragment_easy">Easy</string>
    <string name="buildWorkoutFragment_medium">Medium</string>
    <string name="buildWorkoutFragment_hard">Hard</string>
    <string name="buildWorkoutFragment_select_your_level">Select your level</string>
    <string name="buildWorkoutFragment_exercises_title">Number of exercises</string>
    <string name="buildWorkoutFragment_back">Back</string>
    <string name="buildWorkoutFragment_chest">Chest</string>
    <string name="buildWorkoutFragment_legs">Legs</string>
    <string name="buildWorkoutFragment_hands_shoulders">Hands/Shoulders</string>
    <string name="buildWorkoutFragment_belly">Belly</string>
    <string name="ok">OK</string>
    <string name="build">Build</string>
</resources>