<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/dialog_alert_time_frameLayout_date"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/select_date"
            android:textSize="20sp" />

        <DatePicker
            android:id="@+id/dialogAlertTime_select_date"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            tools:targetApi="lollipop" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/dialog_alert_time_frameLayout_time"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_alert_time_frameLayout_date"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/select_time"
            android:textSize="20sp" />


        <TimePicker
            android:id="@+id/dialogAlertTime_select_time"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:timePickerMode="spinner"
            tools:targetApi="lollipop" />

    </FrameLayout>

    <TextView
        android:id="@+id/dialog_alert_time_message_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userHomePage_error_message_alert"
        android:textColor="@color/red"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_alert_time_frameLayout_time"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>