<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fitShowFragment_ic_exit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/fitShowFragment_exercise_name"
        android:src="@drawable/ic_exit"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/fitShowFragment_exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/fitShowFragment_exercise_set_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fitShowFragment_exercise_name"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/fitShowFragment_start_exercise_image"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fitShowFragment_exercise_set_number"
        tools:ignore="ContentDescription,MissingConstraints"/>

    <TextView
        android:id="@+id/fitShowFragment_start_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorProfile"
        android:textSize="50sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fitShowFragment_start_exercise_image"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/fitShowFragment_timer_linerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fitShowFragment_start_timer"
        tools:ignore="MissingConstraints">


        <Button
            android:id="@+id/fitShowFragment_btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selected"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:text="@string/fitShowFragment_start"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/fitShowFragment_btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selected"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:text="@string/fitShowFragment_stop"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/fitShowFragment_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selected"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:text="@string/fitShowFragment_next"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fitShowFragment_timer_linerLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>